<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.team10.codeflow.Sandbox">

    <item
        android:id="@+id/action_save"
        android:icon="@drawable/ic_save_black_24dp"
        android:title="@string/action_save"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_share"
        android:title="@string/action_share"
        app:actionProviderClass="android.support.v7.widget.ShareActionProvider"/>
        app:showAsAction="never" />

    <item
        android:id="@+id/action_clear"
        android:orderInCategory="100"
        android:title="@string/action_clear"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_projects"
        android:orderInCategory="100"
        android:title="@string/action_projects"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/action_settings"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_mainmenu"
        android:orderInCategory="100"
        android:title="@string/projects_BackButton"
        app:showAsAction="never" />

</menu>
