<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#fffffafa"
    tools:context=".MainMenu"
    android:fitsSystemWindows="true">

    <ImageView
        android:id="@+id/logoImage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="5dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="20dp"
        android:adjustViewBounds="true"
        android:contentDescription="@string/app_logo"
        android:src="@drawable/codeflow_logo" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/copyrightText"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/logoImage"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="5dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginTop="5dp"
        android:gravity="center_vertical|center_horizontal"
        android:orientation="vertical"
        android:padding="5dp"
        android:weightSum="2">
        <!-- TODO: Increase menu margins (right and left) for landscape layout -->

        <!--
        Our theme's default buttons do not look good, and setting a style removes the touch ripple effect.
        In order to get around this, you can set a FrameLayout background colour behind the button.
        -->

        <!-- SANDBOX Button -->
        <FrameLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="10dp"
            android:background="#c862baa5"> <!-- Set button colour -->
            <Button
                android:id="@+id/sandboxButton"
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:background="?android:attr/selectableItemBackground"
                android:onClick="startSandboxScreen"
                android:text="@string/sandboxButton"
                android:textAllCaps="true"
                android:textColor="@android:color/white" />
        </FrameLayout>

        <!-- PROJECTS Button -->
        <FrameLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="10dp"
            android:background="#c862baa5"> <!-- Set button colour -->
            <Button
                android:id="@+id/projectsButton"
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:background="?android:attr/selectableItemBackground"
                android:onClick="startProjectsScreen"
                android:text="@string/projectsButton"
                android:textAllCaps="true"
                android:textColor="@android:color/white" />
        </FrameLayout>

        <!-- SETTINGS Button -->
        <FrameLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="10dp"
            android:background="#c862baa5"> <!-- Set button colour -->
            <Button
                android:id="@+id/settingsButton"
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:background="?android:attr/selectableItemBackground"
                android:onClick="startSettingsScreen"
                android:text="@string/settingsButton"
                android:textAllCaps="true"
                android:textColor="@android:color/white" />
        </FrameLayout>

    </LinearLayout>

    <!-- Copyright text at bottom of main menu -->
    <TextView
        android:id="@+id/copyrightText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center_horizontal"
        android:gravity="center"
        android:paddingBottom="5dp"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:text="@string/copyrightText"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textSize="10sp" />

</RelativeLayout>